--- a/app/assets/stylesheets/visitors.scss
+++ b/app/assets/stylesheets/visitors.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the visitors controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.btn-row {
+  width: 100%;
+}
+
+.main-img {
+  width:auto;
+  height:400px;
+  margin-left:auto;
+  margin-right:auto;
+  display:block;
+}
